--- a/static/test.html
+++ b/static/test.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Weerwolven</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
@@ -94,12 +95,53 @@
             </div>
           </div>
         </div>
+
+
         <div class="chatEnSpelstatus col-4">
+          <div class="row">
+            <h1 id="GameStatus"></h1>
+            <h1 id="YourStatus"></h1>
+            <p id="RoleDescription"></p>
+          </div>
+          <div class="row">
+            <div class="AllMessages">
+              <div id="messagesContainer" class="messages" style="overflow-y: scroll; height:400px;">
 
+              </div>
+              <form id="chatForm">
+                <input
+                      id="msg"
+                      type="text"
+                      placeholder="Enter Message"
+                      required
+                      autocomplete="off"
+                    />
+                <input type="submit">
+              </form>
+            </div>
+          </div>
         </div>
+
+
         <div class="rollenlijstEnKeuze col-4">
+          <div class="rollenLijst">
+
+          </div>
+
+          <div class="nightDayFunction">
+            <form id="NightForm">
+
+              <input type="submit">
+            </form>
+            <form id="DayForm">
+
+              <input type="submit">
+            </form>
+          </div>
 
         </div>
+
+
       </div>
     </div>
 
