--- a/static/test.html
+++ b/static/test.html
@@ -3,149 +3,68 @@
   <head>
     <meta charset="utf-8">
     <title>Weerwolven</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
-      <h1 class="navbar-brand">De mafia</h1>
+    <nav class="navbar navbar-light bg-light" id="navbar">
+      <!-- navbar navbar-dark bg-dark -->
+      <h3 class="navbar-brand">Weerwolven</h3>
+
     </nav>
-
-    <!---  Het verdelen in drie secties:
-      - de kaarten van iedereen met hun gebruikersnaam
-      - de chat en de spelstatus
-      - de rollenlijst en de dag/nacht keuze
-
-    ---->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="deelnemers col-4">
-          <div class="cards container-fluid">
-
-            <div class="row">
-
-
-              <div class="card col-4 roleCard YourRoleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-              <div class="card col-4 roleCard" style="">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-
-
-            </div>
-            <div class="Button-start">
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="chatEnSpelstatus col-4">
-          <div class="row">
-            <h1 id="GameStatus"></h1>
-            <h1 id="YourStatus"></h1>
-            <p id="RoleDescription"></p>
-          </div>
-          <div class="row">
-            <div class="AllMessages">
-              <div id="messagesContainer" class="messages" style="overflow-y: scroll; height:400px;">
-
-              </div>
-              <form id="chatForm">
-                <input
-                      id="msg"
-                      type="text"
-                      placeholder="Enter Message"
-                      required
-                      autocomplete="off"
-                    />
-                <input type="submit">
-              </form>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="rollenlijstEnKeuze col-4">
-          <div class="rollenLijst">
-
-          </div>
-
-          <div class="nightDayFunction">
-            <form id="NightForm">
-
-              <input type="submit">
-            </form>
-            <form id="DayForm">
-
-              <input type="submit">
-            </form>
-          </div>
-
-        </div>
-
+    <div class="mainContainer">
+      <div class="roleContainer">
 
       </div>
-    </div>
+      <div class="AllMessages">
+        <div id="messagesContainer" class="messages" style="overflow-y: scroll; height:400px;">
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+        </div>
+        <form id="chatForm">
+          <input
+                id="msg"
+                type="text"
+                placeholder="Enter Message"
+                required
+                autocomplete="off"
+              />
+          <input type="submit">
+        </form>
+      </div>
+      <div class="Button-start">
+
+      </div>
+      <div class="userListDiv">
+        <table id="userList">
+
+        </table>
+      </div>
+      <div class="nightDayFunction">
+        <form id="NightForm">
+
+          <input type="submit">
+        </form>
+        <form id="DayForm">
+
+          <input type="submit">
+        </form>
+      </div>
+    </div>
+    <footer class="footer bg-light" id="footer">
+      <div class="container">
+        <span class="text-muted">Voor ICTidW</span>
+      </div>
+    </footer>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
+      integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
+      crossorigin="anonymous">
+    </script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
   </body>
 </html>
